Changed text index.html

--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
     <div>
 
         <!-- <a href="https://manaschool.in/"> -->
-        <b class="loveTEXT">Will You Be Mine?</b>
+        <b class="loveTEXT">Will You Stick With Me Forever Miss Nikita?</b>
         <!-- </a> -->
         <div class="btn-group">
             <button id="yes-btn" class="loverbtn">Yes</button>
-            <button id="no-btn" class="loverbtn">No</button>
+            <button id="no-btn" class="loverbtn">No Shusshh </button>
         </div>
     </div>
 
