Text changes index.html

--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
     <div>
 
         <!-- <a href="https://manaschool.in/"> -->
-        <b class="loveTEXT">Will You Stick With Me Forever Miss Nikita?</b>
+        <b class="loveTEXT">Will You be mine forever Miss Nikita?</b>
         <!-- </a> -->
         <div class="btn-group">
             <button id="yes-btn" class="loverbtn">Yes</button>
-            <button id="no-btn" class="loverbtn">No Shusshh </button>
+            <button id="no-btn" class="loverbtn">No </button>
         </div>
     </div>
 
@@ -169,7 +169,7 @@
     <div class="paper heart">
     </div>
     <div class="paper image">
-        <p>I LOVE YOU</p>
+        <p>I LOVE YOU BACCHA</p>
         <img src="https://qph.cf2.quoracdn.net/main-qimg-70023610dfea347f774fbc343a44357b-lq" />
     </div>
     <div class="paper image">
@@ -187,7 +187,7 @@
         <p class="p2">Person 😍</p>
     </div>
     <div class="paper">
-        <p class="p1">You are Cute </p>
+        <p class="p1">You are Cutely </p>
         <p class="p1">Amazing <span style="color: red !important;">❤️</span></p>
     </div>
     <div class="paper">
